# rust_entendendo_referencias

./: Cargo.toml
src/: dispatch_dynamic.rs  funcional.rs  iteradores.rs  jogo_com_rc.rs  jogo_com_refcell.rs  main.rs  my_box_example.rs  my_rc_example.rs
src/deserializacao/: mod.rs
src/dispatch_dynamic/: mod.rs
src/entenderndo_regex/: email.rs  mod.rs
src/funcional/: mod.rs
src/iteradores/: mod.rs
src/jogo_com_rc/: mod.rs
src/minha_senha/: mod.rs
src/my_box_example/: mod.rs
src/my_rc_example/: mod.rs
src/tratamento_erro/: mod.rs
